<resources>
    <string name="app_name">Nutrition</string>
    <string name="nutrition">Nutrition</string>
    <string name="search">Search</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="config">CONFIG</string>
    <string name="weight_unit">Weight Unit</string>
    <string name="type_activity">Type Activity</string>
    <string name="height_unit">Height Unit</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="save">Save</string>
    <string name="input_height">Input Height</string>
    <string name="input_weight">Input Weight</string>
    <string name="input_age">Input Age</string>
    <string name="refresh">Refresh</string>
    <string name="tef">TEF :</string>
    <string name="bmr">BMR :</string>
    <string name="tea">TEA</string>
    <string name="tdee">TDEE :</string>
    <string name="style">Style</string>
    <string name="maximum_calories_for_a_day">Maximum Calories for a Day</string>
    <string name="clear_data">Clear Data</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="name1">Name:</string>
    <string-array name="sex_kind">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="activity_kind">
        <item>Sedentary</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Extra Active</item>
    </string-array>
    <string-array name="height_unit">
        <item>Centimeter</item>
        <item>Feet</item>
    </string-array>
    <string-array name="Weight_unit">
        <item>Kilogam</item>
        <item>Pound</item>
    </string-array>
    <string-array name="Style">
        <item>Normal</item>
        <item>Lose Weight</item>
        <item>Bulking</item>
    </string-array>
</resources>