<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigScreen">

    <Spinner
        android:id="@+id/hunitspinner"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toEndOf="@+id/typetext3"
        app:layout_constraintTop_toBottomOf="@+id/wunitspinner"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/typetext3"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/height_unit"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typetext2" />

    <Spinner
        android:id="@+id/wunitspinner"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/typetext2"
        app:layout_constraintTop_toBottomOf="@+id/typespinner"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/typetext2"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/weight_unit"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typetext" />

    <Spinner
        android:id="@+id/typespinner"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toEndOf="@+id/typetext"
        app:layout_constraintTop_toBottomOf="@+id/age_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/age_text"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toEndOf="@+id/age"
        app:layout_constraintTop_toBottomOf="@+id/sexspinner"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/typetext"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/type_activity"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <TextView
        android:id="@+id/age"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:fontFamily="monospace"
        android:text="@string/age"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sextext" />

    <TextView
        android:id="@+id/weighttextview"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:fontFamily="monospace"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heighttextview" />

    <EditText
        android:id="@+id/height_text"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toEndOf="@+id/heighttextview"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/weight_text"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/weighttextview"
        app:layout_constraintTop_toBottomOf="@+id/height_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/heighttextview"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:fontFamily="monospace"
        android:text="@string/height"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sextext"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:fontFamily="monospace"
        android:text="@string/sex"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weighttextview" />

    <Spinner
        android:id="@+id/sexspinner"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toEndOf="@+id/sextext"
        app:layout_constraintTop_toBottomOf="@+id/weight_text"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>